--- a/lib/spine/Makefile.am
+++ b/lib/spine/Makefile.am
@@ -5,6 +5,7 @@
 #pkgconfigdir = $(libdir)/pkgconfig
 
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/lib \
 	-I$(top_srcdir)/lib/cgraph \
 	-I$(top_srcdir)/lib/cdt
 
