diambiguate lib/topfish/*.c #includes
Related to #1242 and #1785.

--- a/lib/topfish/CMakeLists.txt
+++ b/lib/topfish/CMakeLists.txt
@@ -1,11 +1,5 @@
 if (with_smyrna)
 
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${GRAPHVIZ_LIB_DIR}/common
-    ${GRAPHVIZ_LIB_DIR}/neatogen
-)
-
 add_library(topfish STATIC
     # Header files
     hierarchy.h
@@ -13,6 +7,13 @@ add_library(topfish STATIC
     # Source files
     hierarchy.c
     rescale_layout.c
+)
+
+target_include_directories(topfish PRIVATE
+    ${GRAPHVIZ_LIB_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${GRAPHVIZ_LIB_DIR}/common
+    ${GRAPHVIZ_LIB_DIR}/neatogen
 )
 
 endif (with_smyrna)
