disambiguate lib/vmalloc/*.c #includes
Related to #1785.

--- a/lib/vmalloc/CMakeLists.txt
+++ b/lib/vmalloc/CMakeLists.txt
@@ -1,5 +1,3 @@
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
 add_library(vmalloc STATIC
     # Header files
     vmalloc.h
@@ -11,4 +9,9 @@ add_library(vmalloc STATIC
     vmclose.c
     vmopen.c
     vmstrdup.c
+)
+
+target_include_directories(vmalloc PRIVATE
+    ${GRAPHVIZ_LIB_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
 )
