disambiguate cmd/dot #includes
Related to #1785.

--- a/cmd/dot/Makefile.am
+++ b/cmd/dot/Makefile.am
@@ -15,6 +15,7 @@ linkedprogram += sfdp$(EXEEXT)
 endif
 
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/lib \
         -I$(top_srcdir)/lib/common \
         -I$(top_srcdir)/lib/gvc \
 	-I$(top_srcdir)/lib/pathplan \
