--- a/cmd/dot/CMakeLists.txt
+++ b/cmd/dot/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_definitions(-DDEMAND_LOADING=1)
 
 include_directories(
+    ${GRAPHVIZ_LIB_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_BINARY_DIR}
     ${GRAPHVIZ_LIB_DIR}/cdt
