disambiguate cmd/gvedit #includes
Related to #1785.

--- a/cmd/gvedit/Makefile.am
+++ b/cmd/gvedit/Makefile.am
@@ -17,6 +17,7 @@ pdf_DATA = $(pdfs)
 endif
 
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/lib \
 	-I$(top_srcdir)/lib/common \
 	-I$(top_srcdir)/lib/gvc \
 	-I$(top_srcdir)/lib/pathplan \
