disambiguate cmd/gvpr #includes
Related to #1785.

--- a/cmd/gvpr/Makefile.am
+++ b/cmd/gvpr/Makefile.am
@@ -6,6 +6,7 @@ SUBDIRS = lib
 pdfdir = $(pkgdatadir)/doc/pdf
 
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/lib \
 	-I$(top_srcdir)/lib/expr \
 	-I$(top_builddir)/lib/expr \
 	-I$(top_srcdir)/lib/gvpr \
