--- a/lib/cgraph/Makefile.am
+++ b/lib/cgraph/Makefile.am
@@ -30,8 +30,8 @@ scan.o scan.lo: scan.c grammar.h
 
 scan.c: $(top_srcdir)/lib/cgraph/scan.l
 	@LEX@ -i $(top_srcdir)/lib/cgraph/scan.l
-	@SED@ "s/yy/aag/g" < @LEX_OUTPUT_ROOT@.c > scan.c
-	rm @LEX_OUTPUT_ROOT@.c
+	@SED@ "s/yy/aag/g" < lex.aag.c > scan.c
+	rm lex.aag.c
 
 grammar.c: y.tab.c
 	@SED@ "s/yy/aag/g" < y.tab.c > grammar.c
