remove unnecessary intermediate build step

--- a/lib/cgraph/Makefile.am
+++ b/lib/cgraph/Makefile.am
@@ -31,16 +31,8 @@ scan.o scan.lo: scan.c grammar.h
 scan.c: $(top_srcdir)/lib/cgraph/scan.l
 	@LEX@ --outfile=$@ -i $(top_srcdir)/lib/cgraph/scan.l
 
-grammar.c: y.tab.c
-	cp -f y.tab.c grammar.c
-
-grammar.h: y.tab.h
-	cp -f y.tab.h grammar.h
-
-y.tab.c y.tab.h: y.output
-
-y.output: $(top_srcdir)/lib/cgraph/grammar.y
-	@YACC@ -Wno-yacc -dv $(top_srcdir)/lib/cgraph/grammar.y
+grammar.c grammar.h: $(top_srcdir)/lib/cgraph/grammar.y
+	@YACC@ -Wno-yacc -dv --output=grammar.c $(top_srcdir)/lib/cgraph/grammar.y
 
 cgraph.3.pdf: cgraph.3.ps
 	@PS2PDF@ $< $@
@@ -50,6 +42,6 @@ cgraph.3.ps: $(srcdir)/cgraph.3
 
 EXTRA_DIST = $(man_MANS) $(pdf_DATA) cmpnd.c \
 	grammar.c grammar.h scan.c \
-	y.tab.c y.tab.h y.output cgraph.vcxproj*
+	cgraph.vcxproj*
 
-DISTCLEANFILES = $(pdf_DATA) grammar.[ch] scan.c y.output y.tab.[ch] cgraph.3.ps
+DISTCLEANFILES = $(pdf_DATA) grammar.[ch] scan.c cgraph.3.ps
