Adapt MSBuild project files to renamed win_flex and win_bison

--- a/cmd/tools/gml2gv.vcxproj
+++ b/cmd/tools/gml2gv.vcxproj
@@ -72,10 +72,10 @@
       <AdditionalDependencies>getopt.lib;cdt.lib;cgraph.lib;ingraphs.lib;gvc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
-      <Command>flex  -o gmlscan-intermediate.c -i gmlscan.l
+      <Command>win_flex  -o gmlscan-intermediate.c -i gmlscan.l
 sed "s/yy/gml/g" &lt; gmlscan-intermediate.c &gt; gmlscan.c
 del gmlscan-intermediate.c
-bison -dy gmlparse.y -o gmlparse-intermediate.c
+win_bison -dy gmlparse.y -o gmlparse-intermediate.c
 sed "s/yy/gml/g" &lt; gmlparse-intermediate.h &gt; gmlparse.h
 sed "s/yy/gml/g" &lt; gmlparse-intermediate.c &gt; gmlparse.c
 del gmlparse-intermediate.h
@@ -101,10 +101,10 @@ del gmlparse-intermediate.c</Command>
       <AdditionalDependencies>getopt.lib;cdt.lib;cgraph.lib;ingraphs.lib;gvc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
-      <Command>flex  -o gmlscan-intermediate.c -i gmlscan.l
+      <Command>win_flex  -o gmlscan-intermediate.c -i gmlscan.l
 sed "s/yy/gml/g" &lt; gmlscan-intermediate.c &gt; gmlscan.c
 del gmlscan-intermediate.c
-bison -dy gmlparse.y -o gmlparse-intermediate.c
+win_bison -dy gmlparse.y -o gmlparse-intermediate.c
 sed "s/yy/gml/g" &lt; gmlparse-intermediate.h &gt; gmlparse.h
 sed "s/yy/gml/g" &lt; gmlparse-intermediate.c &gt; gmlparse.c
 del gmlparse-intermediate.h
