fix case warnings for RxSpencer during CMake builds
This fixes the following CI warning:

  -- Found RXSPENCER: ...rxspencer.lib
  CMake Warning (dev) at ...FindPackageHandleStandardArgs.cmake:272 (message):
    The package name passed to `find_package_handle_standard_args` (RXSPENCER)
    does not match the name of the calling package (RxSpencer).  This can lead
    to problems in calling code that expects `find_package` result variables
    (e.g., `_FOUND`) to follow a certain pattern.
  Call Stack (most recent call first):
    cmake/FindRxSpencer.cmake:5 (find_package_handle_standard_args)
    CMakeLists.txt:90 (find_package)
  This warning is for project developers.  Use -Wno-dev to suppress it.

--- a/lib/gvc/CMakeLists.txt
+++ b/lib/gvc/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(
     ${GRAPHVIZ_LIB_DIR}/common
     ${GRAPHVIZ_LIB_DIR}/pathplan
     ${LTDL_INCLUDE_DIRS}
-    ${RXSPENCER_INCLUDE_DIRS}
+    ${RxSpencer_INCLUDE_DIRS}
 )
 
 add_library(gvc SHARED
@@ -57,7 +57,7 @@ target_link_libraries(gvc
     pathplan
     xdot
     ${EXPAT_LIBRARIES}
-    ${RXSPENCER_LIBRARIES}
+    ${RxSpencer_LIBRARIES}
     ${ZLIB_LIBRARIES}
     ${MATH_LIB}
 )
