--- a/plugin/ming/Makefile.am
+++ b/plugin/ming/Makefile.am
@@ -4,6 +4,7 @@
 pkgfontdir = ${pkgdatadir}/font
 
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/lib \
 	-I$(top_srcdir)/lib/common \
 	-I$(top_srcdir)/lib/pathplan \
 	-I$(top_srcdir)/lib/gvc \
